# ebpf-for-windows

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .vsconfig  .yamllint.yml  Analyze.default.props  Analyze.default.ruleset  CMakeLists.txt  CONTRIBUTING.md  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  Doxyfile  GRANULAR_TRACING.md  GRANULAR_TRACING_BENEFITS.md  LICENSE.rtf  Nuget.config  README.md  README_build.md  TEST_IMPLEMENTATION_SUMMARY.md  UpgradeLog.htm  _codeql_detected_source_root  annotated.html  bpf2c_8h.html  bpf2c_8h_source.html  bpf_2bpf_8h.html  bpf_2bpf_8h_source.html  bpf_8h.html  bpf_8h_source.html  bpf__conformance_8h.html  bpf__conformance_8h_source.html  bpf__endian_8h.html  bpf__endian_8h_source.html  bpf__helper__defs_8h.html  bpf__helper__defs_8h_source.html  bpf__helpers_8h.html  bpf__helpers_8h_source.html  bpf__helpers__platform_8h.html  (+305 more)
ebpfapi/: CMakeLists.txt  Source.def  dllmain.cpp  ebpfapi.vcxproj  ebpfapi.vcxproj.filters  pch.h  platform.cpp  resource.h  rpc_client.cpp
ebpfcore/: CMakeLists.txt  EbpfCore.inf  EbpfCore.vcxproj  EbpfCore.vcxproj.filters  ebpf_drv.c  ebpf_wfp_ext.c  ebpf_wfp_ext.h
ebpfcore/usersim/: EbpfCore_Usersim.vcxproj  EbpfCore_Usersim.vcxproj.filters  ntddk.h  resource.h
ebpfsvc/: CMakeLists.txt  api.cpp  api.h  eBPFSvc.vcxproj  eBPFSvc.vcxproj.filters  ebpf_result.h  pch.cpp  pch.h  platform.cpp  resource.h  rpc_api.cpp  rpc_interface.acf  rpc_interface.idl  rpc_util.cpp  rpc_util.h  svc_common.h  svcmain.cpp
libs/: CMakeLists.txt
libs/api/: CMakeLists.txt  Verifier.cpp  Verifier.h  api.vcxproj  api.vcxproj.filters  api_internal.h  bpf_syscall.cpp  crab_verifier_wrapper.hpp  ebpf_api.cpp  ebpf_execution_context.h  ebpfapi.vcxproj.filters  elfio_wrapper.hpp  libbpf_errno.cpp  libbpf_internal.h  libbpf_link.cpp  libbpf_map.cpp  libbpf_object.cpp  libbpf_program.cpp  libbpf_system.cpp  pch.h  platform.h  rpc_client.h  service_helper.cpp  service_helper.hpp  unwind_helper.h  windows_helpers.cpp  windows_platform.cpp  windows_platform.hpp
libs/api_common/: CMakeLists.txt  api_common.cpp  api_common.hpp  api_common.vcxproj  api_common.vcxproj.filters  device_helper.cpp  device_helper.hpp  ebpf_verifier_wrapper.hpp  map_descriptors.cpp  map_descriptors.hpp  midl_alloc.cpp  registry_helper.cpp  registry_helper.hpp  store_helper_internal.cpp  store_helper_internal.h  um_registry_helper.h  utilities.cpp  utilities.hpp  windows_helpers.cpp  windows_helpers.hpp  windows_platform_common.cpp  windows_platform_common.hpp  windows_program_type.h
libs/common/: api_common.cpp  api_common.hpp  common.vcxproj  common.vcxproj.filters  map_descriptors.cpp  map_descriptors.hpp  service_api.cpp  windows_helpers.cpp  windows_platform_common.cpp  windows_platform_common.hpp
libs/ebpfnetsh/: CMakeLists.txt  ebpfnetsh.vcxproj  ebpfnetsh.vcxproj.filters  elf.cpp  elf.h  latency.cpp  latency.h  links.cpp  links.h  maps.cpp  maps.h  netsh_hash.cpp  netsh_hash.h  netsh_static.vcxproj  netsh_static.vcxproj.filters  pins.cpp  pins.h  processes.cpp  processes.h  programs.cpp  programs.h  tokens.h  util.cpp  util.h  utilities.cpp  utilities.h
libs/elf_spec/: CMakeLists.txt  Elf.3d  elf_spec.vcxproj  elf_spec.vcxproj.filters  packages.config
libs/epoch/: ebpf_epoch.c
libs/execution_context/: CMakeLists.txt  EBPF_NATIVE.H  ebpf_core.c  ebpf_core.h  ebpf_core_config.c  ebpf_core_config.h  ebpf_core_jit.c  ebpf_core_jit.h  ebpf_extensible_maps.c  ebpf_extensible_maps.h  ebpf_general_helpers.c  ebpf_latency.c  ebpf_latency.h  ebpf_link.c  ebpf_link.h  ebpf_map_macros.c  ebpf_map_macros.h  ebpf_maps.c  ebpf_maps.h  ebpf_maps.json  ebpf_maps_structs.h  ebpf_native.c  ebpf_native.h  ebpf_program.c  ebpf_program.h  ebpf_protocol.h  ebpf_strings.c  ebpf_strings.h  string_opts.c
libs/ioctl_spec/: EbpfProtocol.3d  ebpf_protocol_layout_check.h  ebpf_protocol_validator.c  ebpf_protocol_validator.h  ioctl_spec.vcxproj  ioctl_spec.vcxproj.filters  packages.config
libs/no_asan/: no_asan.cpp  no_asan_kernel.cpp  no_asan_kernel.vcxproj
libs/pe-parse/: CMakeLists.txt  pe-parse.vcxproj  pe-parse.vcxproj.filters
libs/platform/: CMakeLists.txt  ebpf_async.c  ebpf_async.h  ebpf_bitmap.c  ebpf_bitmap.h  ebpf_completion.c  ebpf_completion.h  ebpf_crypto_hash.c  ebpf_epoch.c  ebpf_epoch.h  ebpf_error.c  ebpf_etw.c  ebpf_extension.c  ebpf_handle.h  ebpf_hash_table.c  ebpf_hash_table.h  ebpf_interlocked.c  ebpf_object.c  ebpf_object.h  ebpf_pinning_table.c  ebpf_pinning_table.h  ebpf_platform.c  ebpf_platform.h  ebpf_program_types.acf  ebpf_program_types.c  ebpf_program_types.idl  ebpf_random.c  ebpf_random.h  ebpf_ring_buffer.c  ebpf_ring_buffer.h  ebpf_rundown_ref.c  ebpf_serialize.c  ebpf_serialize.h  ebpf_state.c  ebpf_state.h  ebpf_tracelog.c  ebpf_tracelog.h  ebpf_tracing.c  ebpf_trampoline.c
libs/runtime/: ebpf_async.c  ebpf_async.h  ebpf_bitmap.c  ebpf_bitmap.h  ebpf_crypto_hash.c  ebpf_epoch.c  ebpf_epoch.h  ebpf_error.c  ebpf_error.h  ebpf_handle.h  ebpf_hash_table.c  ebpf_hash_table.h  ebpf_interlocked.c  ebpf_object.c  ebpf_object.h  ebpf_perf_event_array.c  ebpf_perf_event_array.h  ebpf_pinning_table.c  (+13 more)
netebpfext/: CMakeLists.txt  ebpf_ext_attach_provider.c  ebpf_ext_attach_provider.h  guid.c  net_ebpf_ext.c  net_ebpf_ext.h  net_ebpf_ext_bind.c  net_ebpf_ext_bind.h  net_ebpf_ext_drv.c  net_ebpf_ext_helpers.h  net_ebpf_ext_hook_provider.c  net_ebpf_ext_hook_provider.h  net_ebpf_ext_process.c  net_ebpf_ext_process.h  net_ebpf_ext_prog_info_provider.c  net_ebpf_ext_prog_info_provider.h  net_ebpf_ext_program_info.h  net_ebpf_ext_sock_addr.c  net_ebpf_ext_sock_addr.h  net_ebpf_ext_sock_ops.c  net_ebpf_ext_sock_ops.h  net_ebpf_ext_structs.h  net_ebpf_ext_tracelog.c  net_ebpf_ext_tracelog.h  net_ebpf_ext_xdp.c  net_ebpf_ext_xdp.h  net_ebpf_ext_xdp_hooks.h  netebpfext.inf  netebpfext.vcxproj  netebpfext.vcxproj.filters  resource.h  sample.c
rpc_interface/: CMakeLists.txt  rpc_interface.acf  rpc_interface.idl  rpc_interface.vcxproj  rpc_interface.vcxproj.filters
tests/: CMakeLists.txt
(+2393 files in other folders)
