# Copyright (c) Microsoft Corporation
# SPDX-License-Identifier: MIT

add_subdirectory("api")
add_subdirectory("api_common")
add_subdirectory("execution_context")
add_subdirectory("elf_spec")
add_subdirectory("pe-parse")
add_subdirectory("platform")
add_subdirectory("ebpfnetsh")
add_subdirectory("service")
add_subdirectory("store_helper")
add_subdirectory("ubpf")
