# Copyright (c) Microsoft Corporation
# SPDX-License-Identifier: MIT

add_subdirectory("api_test")
add_subdirectory("bpf2c_plugin")
add_subdirectory("bpf2c_tests")
add_subdirectory("bpftool_tests")
add_subdirectory("cilium")
add_subdirectory("libs")
add_subdirectory("performance")
add_subdirectory("sample")
add_subdirectory("socket")
add_subdirectory("stress")
add_subdirectory("xdp")
add_subdirectory("unit")
